src/metrics/snapshots/big_code_analysis__metrics__loc__tests__tcl_try_catch_lloc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 8,
  "ploc": 8,
  "lloc": 5,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 8.0,
  "ploc_average": 8.0,
  "lloc_average": 5.0,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 8,
  "sloc_max": 8,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 8,
  "ploc_max": 8,
  "lloc_min": 5,
  "lloc_max": 5,
  "blank_min": 0,
  "blank_max": 0
}
