src/metrics/snapshots/big_code_analysis__metrics__loc__tests__tsx_arrow_function_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 4.0,
  "ploc": 4.0,
  "lloc": 2.0,
  "cloc": 0.0,
  "blank": 0.0,
  "sloc_average": 1.3333333333333333,
  "ploc_average": 1.3333333333333333,
  "lloc_average": 0.6666666666666666,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 1.0,
  "sloc_max": 4.0,
  "cloc_min": 0.0,
  "cloc_max": 0.0,
  "ploc_min": 1.0,
  "ploc_max": 4.0,
  "lloc_min": 0.0,
  "lloc_max": 2.0,
  "blank_min": 0.0,
  "blank_max": 0.0
}
