src/metrics/snapshots/big_code_analysis__metrics__loc__tests__tsx_interface_loc.snap
---
source: src/metrics/loc.rs
expression: metric.loc
---
{
  "sloc": 7,
  "ploc": 7,
  "lloc": 1,
  "cloc": 0,
  "blank": 0,
  "sloc_average": 2.3333333333333335,
  "ploc_average": 2.3333333333333335,
  "lloc_average": 0.3333333333333333,
  "cloc_average": 0.0,
  "blank_average": 0.0,
  "sloc_min": 3,
  "sloc_max": 7,
  "cloc_min": 0,
  "cloc_max": 0,
  "ploc_min": 3,
  "ploc_max": 7,
  "lloc_min": 0,
  "lloc_max": 1,
  "blank_min": 0,
  "blank_max": 0
}
